--- a/Views/Province/DisplayProvince.cshtml
+++ b/Views/Province/DisplayProvince.cshtml
@@ -6,49 +6,53 @@
 
 }
 
-
-    <div class="blog-card">
-        <input type="radio" name="select" id="tap-1" checked />
-        <input type="radio" name="select" id="tap-2" />
-        <input type="radio" name="select" id="tap-3" />
-        <input type="checkbox" id="imgTap" />
-        <div class="sliders">
-            <label for="tap-1" class="tap tap-1"></label>
-            <label for="tap-2" class="tap tap-2"></label>
-            <label for="tap-3" class="tap tap-3"></label>
+<div class="container my-5">
+    <div class="blog-card row">
+        <div class="col-12">
+            <input type="radio" name="select" id="tap-1" checked />
+            <input type="radio" name="select" id="tap-2" />
+            <input type="radio" name="select" id="tap-3" />
+            <input type="checkbox" id="imgTap" />
+            <div class="sliders">
+                <label for="tap-1" class="tap tap-1"></label>
+                <label for="tap-2" class="tap tap-2"></label>
+                <label for="tap-3" class="tap tap-3"></label>
+            </div>
         </div>
         <!-- Slide 1 -->
-        <div class="inner-part">
+        <div class="inner-part col-md-4 col-sm-6">
             <label for="imgTap" class="img">
                 <img src="~/img/naghshejahan.jfif" alt="" class="img-1" />
             </label>
             <div class="content content-1">
                 <h3 class="title">میدان نقش جهان</h3>
                 <p class="text">میدان نقش جهان یکی از تاریخی ترین و همچنین جذاب ترین مکان های گردشگری استان اصفهان است.</p>
-                <button>بیشتر</button>
+                <button class="btn btn-primary">بیشتر</button>
             </div>
         </div>
         <!-- Slide 2 -->
-        <div class="inner-part">
+        <div class="inner-part col-md-4 col-sm-6">
             <label for="imgTap" class="img">
-            <img src="~/img/alighapo.jpg" alt="" class="img-2" />
+                <img src="~/img/alighapo.jpg" alt="" class="img-2 img-fluid" />
             </label>
             <div class="content content-2">
                 <h3 class="title">عمارت عالی قاپو</h3>
                 <p class="text">کاخ عالی قاپو در میدان نقش جهان اصفهان از زیباترین نمونه‌های معماری دوره صفویان به شمار می‌آید.</p>
-                <button>بیشتر</button>
+                <button class="btn btn-primary">بیشتر</button>
             </div>
         </div>
         <!-- Slide 3 -->
-        <div class="inner-part">
+        <div class="inner-part col-md-4 col-sm-6">
             <label for="imgTap" class="img">
-            <img src="~/img/siosepol.jpg" alt="" class="img-3" />
+                <img src="~/img/siosepol.jpg" alt="" class="img-3 img-fluid" />
             </label>
             <div class="content content-3">
                 <h3 class="title">سی و سه پل</h3>
                 <p class="text">این پل در طول تاریخ با نام‌های مختلفی خوانده‌ شده است که از جمله آن‌ها می‌توان به پل شاه‌عباسی، پل الله‌وردی خان، پل جلفا، پل چهل چشمه و پل سی‌وسه چشمه اشاره کرد.</p>
-                <button>بیشتر</button>
+                <button class="btn btn-primary">بیشتر</button>
             </div>
         </div>
     </div>
+</div>
+
 
