--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,16 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - iranAttractions</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link href='https://cdn.fontcdn.ir/Font/Persian/Sahel/Sahel.css' rel='stylesheet' type='text/css'>
     @RenderSection("mainPage", required: false) 
     @RenderSection("Styles", required: false)  
-
+    
     <style>
+         
+
         .navbar {
             display: flex;
             position: fixed;
-            top:0;
+            top: 0px;
             justify-content: center;
-            background-color: #daa38f;
+            background-color: #faad95;
             height: 60px; /* ارتفاع مشخص */
             width: 100%; /* عرض کامل */
             padding: 10px 20px;
@@ -26,15 +29,13 @@
                 list-style-type: none;
                 padding: 0;
                 margin-top: 10px;
-                position: fixed;
                 display: flex;
             }
 
             .navbar li {
                 display: block;
                 margin-left: 20px;
-                float: left;
-                padding: 25px;
+                padding: 15px 25px;
             }
 
             .navbar a {
@@ -46,45 +47,87 @@
         ul li a:hover {
             font: bold;
             font-size: 20px;
-            box-shadow: 2px 5px 30px rgba(0,0,0,.1);
+            box-shadow: 2px 5px 30px rgba(0, 0, 0, .1);
             color: black;
         }
 
-        .logo {
-            width: 80px;
-            height: 50px;
-            margin-right: 20px;
-            align-self: center;
+        .navbar .dropdown {
+            position: relative;
+            display: inline-block;
         }
 
+            .navbar .dropdown:hover .dropdown-content {
+                display: block; /* نمایش منو هنگام قرار گرفتن موس روی منوی استان‌ها */
+            }
 
-        .header-content {
+        .navbar .dropdown-content {
+            display: none; /* پیش‌فرض پنهان بودن منو */
             position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%,-50%);
+            background-color: #faad95;
+            min-width: 160px;
+            z-index: 1;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
         }
-    </style>
+
+            .navbar .dropdown-content a {
+                color: #000;
+                padding: 12px 16px;
+                text-decoration: none;
+                display: block;
+                text-align: right;
+            }
+
+                .navbar .dropdown-content a:hover {
+                    background-color: #ddd;
+                }
+
+
+
+        ul li a:hover {
+            font: bold;
+            font-size: 20px;
+            box-shadow: 2px 5px 30px rgba(0,0,0,.1);
+            color: black;
+        }
+    </style> 
 
 
 </head>
-<body>
-    
-        <nav class="navbar" >
+<body style="font-family: Sahel">
+     
+    <header class="site-header">
+        <nav class="navbar">
+
             <ul>
-                <li><img src="~/img/33.jpg" alt="Logo" class="logo"></li>
-                <li><a href="contact.html">تماس با ما</a></li>
-                <li><a href="blog.html">بلاگ</a></li>
-                <li><a href="gallery.html">گالری</a></li>
-                <li><a href="home.html">خانه</a></li>
-                <li><a href="login.html">ورود/ثبت نام</a></li>
+                <li><img src="img/33.jpg" alt="Logo" class="logo"></li>
+             
+                <li class="dropdown">
+                    <a href="#" class="dropbtn">استان ها</a>
+                    <div class="dropdown-content">
+                        @await Component.InvokeAsync("CityList")
+                        <!-- سایر استان‌ها را اینجا اضافه کنید -->
+                    </div>
+                </li>
+                <li><a asp-action="PictureList" asp-controller="Album">گالری</a></li>
+                <li><a asp-action="privacy" asp-controller="Home">خانه</a></li>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <li>
+                        <a asp-controller="Account" asp-action="Logout">خروج</a>
+                    </li>
+                }
+                else
+                {
+                    <li>
+                        <a asp-controller="Account" asp-action="Login">ورود / ثبت نام</a>
+                    </li>
+
+                }
             </ul>
         </nav>
-
         @RenderSection("header", required: false)
-   
-    
-        
+    </header>
+      
         @RenderBody()
         
     
@@ -95,12 +138,21 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+   
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/pop-up.js"></script>
     <script src="~/js/distination.js" defer></script>
     <script src="~/js/comment-slider.js"></script>
     <script src="~/js/like.js"></script>
     <script src="~/js/Upload-box.js"></script>
     <script src="~/js/insert-profile.js"></script>
+    <script src="~/js/load-more-hotel.js"></script>
+    <script src="~/js/load-more-resturant.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script src="/javaScript/pop-up1.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
